spacing issues,autofocus functionality

--- a/src/Components/ToDo-Components/Tasks.module.css
+++ b/src/Components/ToDo-Components/Tasks.module.css
@@ -1,5 +1,4 @@
 .task-wrapper {
-  display: grid;
   height: 200px;
 }
 ::-webkit-scrollbar {
